# immoeliza-airflow

./: .dockerignore  DAG  DOCKER.md  README.md  docker-compose.yml  immovlan_sales_urls.txt  immovlan_scraped_data_test.csv  pyproject.toml  test_pipeline.py
DAG/: immoeliza_dag.py
airflow/: Dockerfile
analyse/: Preprocessing.py  processed_for_analysis.csv
data/: immovlan_sales_urls.txt  immovlan_scraped_data.csv  immovlan_scraped_data_metrics.json
deployment/: Dockerfile  Dockerfile.txt  app.py
frontend/: Dockerfile  streamlit_app.py
frontend/.web/: package.json  reflex.json
model/: Dockerfile  Preprocessing.py  pipeline.py  train.py
model/processed_data/: X_test.csv  X_train.csv  feature_columns.csv  scaler.pkl  y_test.csv  y_train.csv
model/trained_models/: best_model.pkl  detailed_results.csv  model_metadata.csv
model/trained_models/all_models/: gradient_boosting.pkl  linear_regression.pkl  polynomial_regression.pkl  random_forest.pkl  ridge_regression.pkl
scrapper/: Dockerfile  INCREMENTAL_SCRAPING.md  cleanup_old_properties.py  immovlan.py  improved_scraping.py  main_scraper.py  run_scraper.py  scrapping.py
